# MyRoad

./: .gitignore  .pre-commit-config.yaml  .prettierrc  A Brand Called xiaohui.html  AI Brother&Sister.md  Blog-Technology-Stack.html  CyberFarmer.html  Farming-in-the-cyber-world.md  Icons.md  Prevention and Monitoring of Slow SQL.md  RDMA.md  README.md  Storage-Compute Architecture.md  Story.html  Story.md  index.html  not_created.html  xiaohui-blog-technology-architecture.excalidraw.html  需要中产阶级的原因.md
.obsidian/: app.json  canvas.json  command-palette.json  community-plugins.json  graph.json  hotkeys.json  types.json  workspace.json
CTest/: .gitignore  CMakeLists.txt  Draft.cpp  README.md  in.txt  out.txt
CTest/algorithm/: KMP.cpp  Partition_list.cpp  bubbleSort.c  char2int.cpp  rsa_simple.c
CTest/homework/: 1900022753_ds_01.cpp  ds_02_01.cpp  huffman.cpp  tempCodeRunnerFile.cpp
CTest/include/hello/: CMakeLists.txt
CTest/include/hello/lib/: CMakeLists.txt  Hello.cpp  Hello.h
CTest/others/: list_others.cpp
CTest/src/: CMakeLists.txt  main.cpp
CTest/src/algorithm/: KMP.cpp  Partition_list.cpp  char2int.cpp  quick_sort_with_stack.cpp
CTest/src/homework/: 1900022753_ds_02.cpp  1900022753_ds_03.cpp  1900022753_ds_04.cpp  1900022753_ds_05.cpp  BST_deleteNode.cpp  BST_delete_maxin.cpp  MirrorTree.cpp  SequenceVSBsearch.cpp  Tree2BiTree.cpp  TreeCount.cpp  TreeEqual.cpp  TreeEqual_NoSeq.cpp  TreeEqual_cin.cpp  ds_02_02.cpp  homework_1_1.cpp  leafCount.cpp
CTest/src/test/: AddTest.c
CTest/test/: AddTest.c
Intern/: 02.shixijiexiang.doc  03.kaiti.doc  语文+陈黎君+北京师范大学+18810255972.pptx
JavaTest/: LogParser.java  Mysql.md  Solution.java  out.txt  tempCodeRunnerFile.java
Life/: New Era Encyclopedia.md  No Energy.md  Seeking the Productive Life.md  请相信我，我所说的每一句话都是错的.md
PythonTest/: Blockchain.py  gen_keys.py  hello world.py  point_plot.ipynb  requirements.txt  signature.py  test.csv  wechat_text_download.ipynb  wifiPass.py  wifi_password.txt
TODO/: blog to do.md
TypeScriptTest/: RegexTest.js  StrUtils.js  TrieTree.html  requestUrl.js  (+6 more)
(+1432 files in other folders)
